@@ -1,5 +1,9 @@
 2009-03-06  Badlop  <badlop@process-one.net>
 
+	* src/eldap/eldap.erl: moves waiting for response queries to
+	pending queue on an LDAP connection failure (thanks to Evgeniy
+	Khramtsov)
+
 	* src/eldap/eldap.erl: implemented queue for pending
 	queries (thanks to Evgeniy Khramtsov)
 
